# engram

./: .gitignore  README.md  pyproject.toml
engram/: __init__.py  engine.py  streaming.py
engram/api/: server.py
engram/cli/: main.py
engram/context/: loader.py  provider.py
engram/core/: config.py  decay.py  types.py
engram/retrieval/: mixer.py
engram/stores/: base.py  belief_store.py  concept_store.py  episode_store.py  fact_store.py  session_store.py
engram/synthesizer/: base.py  contradiction.py  deduplicator.py  distiller.py  extractor.py  fact_extractor.py  ollama.py
examples/: ontology_general.ttl  ontology_lifescience.ttl
tests/: test_context.py  test_decay.py  test_engine.py  test_fact_store.py  test_retrieval.py  test_stores.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: Layout.tsx  Logo.tsx
ui/src/pages/: Chat.tsx  Dashboard.tsx  Graph.tsx  Memories.tsx  Ontology.tsx
