[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.3.0-beta"
description = "Temporal Concept Graph with Probabilistic Decay — a local-first AI memory system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.3.0",
    "rdflib>=7.6.0",
    "chromadb>=0.5.0",
    "networkx>=3.2",
    "click>=8.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
engram = "engram.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
